# dpm-g4cpp

./: CMakeLists.txt  Configuration.hh  README.md  dpm_GenerateData.cc  dpm_Simulate.cc  model_validation.cpp  test_brem.cc
DataInit/inc/: DPMElementBuilder.hh  DPMMaterialBuilder.hh  DPMMaterialManager.hh  ElectronData.hh  G4Setup.hh  GS.hh  GSDtrData.hh  InitElectronData.hh  InitPhotonData.hh  KNTableBuilder.hh  MollerTableBuilder.hh  PhotonData.hh  SBTableBuilder.hh
DataInit/src/: DPMElementBuilder.cc  DPMMaterialBuilder.cc  DPMMaterialManager.cc  G4Setup.cc  GS.cc  InitElectronData.cc  InitPhotonData.cc  KNTableBuilder.cc  MollerTableBuilder.cc  SBTableBuilder.cc
SBTables/data/NIST_BREM/: nist_brems_1  nist_brems_10  nist_brems_11  nist_brems_12  nist_brems_13  nist_brems_14  nist_brems_15  nist_brems_16  nist_brems_17  nist_brems_18  nist_brems_19  nist_brems_2  nist_brems_20  nist_brems_21  nist_brems_22  nist_brems_23  nist_brems_24  nist_brems_25  nist_brems_26  nist_brems_27  nist_brems_28  nist_brems_29  nist_brems_3  nist_brems_30  nist_brems_31  nist_brems_32  nist_brems_33  nist_brems_34  nist_brems_35  nist_brems_36  nist_brems_37  nist_brems_38  nist_brems_39  nist_brems_4  nist_brems_40  nist_brems_41  (+64 more)
Simulation/inc/: Geom.hh  Random.hh  SimDPMLike.hh  SimDataLinear.hh  SimDataSpline.hh  SimElectronData.hh  SimGSTables.hh  SimIMFPBrem.hh  SimIMFPMaxPhoton.hh  SimIMFPMoller.hh  SimIMFPPhoton.hh  SimITr1MFPElastic.hh  SimKNTables.hh  SimLinAliasData.hh  SimMaterialData.hh  SimMaxScatStrength.hh  SimMollerTables.hh  SimPhotonData.hh  SimSBTables.hh  SimStoppingPower.hh  Track.hh  TrackStack.hh  simulate.org
Simulation/src/: Geom.cc  Random.cc  SimDPMLike.cc  SimDataLinear.cc  SimDataSpline.cc  SimElectronData.cc  SimGSTables.cc  SimIMFPBrem.cc  SimIMFPMaxPhoton.cc  SimIMFPMoller.cc  SimIMFPPhoton.cc  SimITr1MFPElastic.cc  SimKNTables.cc  SimLinAliasData.cc  SimMaterialData.cc  SimMaxScatStrength.cc  SimMollerTables.cc  SimPhotonData.cc  SimSBTables.cc  SimStoppingPower.cc  TrackStack.cc
Utils/inc/: AliasTable.hh  Cyl_Bessel_K1.hh  GLIntegral.hh  Spline.hh
Utils/src/: AliasTable.cc  Cyl_Bessel_K1.cc  GLIntegral.cc  Spline.cc
modelValidationTests/inc/: testAPI.h
modelValidationTests/src/: testAPI.cc
tests/WaterTiBoneWater_15MeV/: fig_DDose_Water_Ti_Bone_Water_15MeV.eps  gplot_Water_Ti_Bone_Water_15MeV.p  hist.sim
